fix: fix z-index for contacts background

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -10,14 +10,6 @@
   align-items: center;
   position: relative;
 
-  // &::after {
-  //   position: absolute;
-  //   content: url("../img/contacts-bg.png");
-  //   top: -188px;
-  //   right: 0;
-  //   z-index: -10;
-  // }
-
   @include vp-767 {
     padding: 0 20px 34px;
 
@@ -26,6 +18,7 @@
       content: url("../img/contacts-bg-mob.png");
       top: -59px;
       right: -182px;
+      z-index: -1;
     }
   }
 }
